agregando conexion a base de datos y entornos virtuales

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,18 @@
 psycopg2
 pygresql
+certifi
+charset-normalizer
+greenlet
+idna
+numpy
+pandas
+pip
+psycopg2
+python-dateutil
+pytz
+requests
+setuptools
+six
+SQLAlchemy
+urllib3
+python-decouple
